--- a/style/style.css
+++ b/style/style.css
@@ -1,33 +1,66 @@
-@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-nav {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    line-height: 80px;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
-    justify-content: space-between;
-    border-bottom: 2px solid #e3dfdf; 
-    background-color: #ffffff;
-}
-
-.navbar-brand {
-    margin-left: 50px;
-}
-
-body {
+body, html {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    width: 100%;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+    background: rgba(0, 0, 0, 0.5) !important; /* Semi-transparent background */
+    border-bottom: none;
+    position: absolute; /* Make the navbar position absolute */
+    top: 0;
+    width: 100%;
+    line-height: 80px;
+    z-index: 10; /* Ensure the navbar is above other elements */
+}
+
+.navbar-brand  {
+    margin-left:30px ;
+    color: #050101 !important;
+}
+
+.nav-link {
+    color: #050101 !important;
+}
+
+.nav-link.active {
+    font-weight: bold;
+}
+
+.navbar-logo img {
+    height: 40px;
+}
+
+#homepage {
+    width: 100%;
+    height: 100vh;
+    position: relative;
 }
 
 .hero {
+    background: url('/assets/Frame1.png') no-repeat center center/cover;
+    filter: brightness(60%);
+    width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    background-image: url(assets/Frame1.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+    position: relative;
+}
+
+.hero-text {
+    color: #fff;
+    filter: brightness(100%);
+    opacity: 1;
+    z-index: 10;
+    text-align: center;
+    padding: 20px;
+    margin-right: 10px;
+}
+
+.hero-text h1{
+    font-style: Roboto;
+    font-size: 2.5rem;
+    margin: 0px;
+}
