--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <section id="homepage">
+    <section id="homepage1">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Magetan</a>
@@ -29,13 +29,18 @@
                 </a>
               </div> -->
             </div>
-          </nav> 
+        </nav> 
 
-          <div class="hero">
+        <div class="hero">
             <div class="hero-text">
                 <h1>Nikmati pesona alam di Kabupaten Magetan</h1>
             </div>
         </div>
+    </section>
+
+    <section id="homepage2">
+        <h1>Keindahan kota Magetan</h1>
+          
     </section>
          
 
