--- a/style/style.css
+++ b/style/style.css
@@ -20,11 +20,12 @@ nav {
     margin-left:30px ;
     filter:brightness(100%);
     color: #ffffff !important;
-    font-size: 50px;
+    font-size:50px;
 }
 
 .nav-link {
     color: #ffffff !important;
+    font-weight: bold;
 }
 
 .nav-link.active {
@@ -35,36 +36,41 @@ nav {
     height: 40px;
 }
 
-#homepage {
+#homepage1 {
     width: 100%;
     height: 100vh;
-    background: url('/assets/Frame1.png');
-    filter: brightness(60%); 
+    background: url('/assets/Frame.png');
     background-size: cover;
     background-position: center;
     position: relative;
 }
 
 .hero {     
-    width: 100%;
-    height: 100%;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     position: relative;
 }
 
 .hero-text {
     color: #fff;
-    filter: brightness(100%);
-    opacity: 1;
-    z-index: 10;
     text-align: center;
-    padding: 20px;
-    margin-right: 10px;
+    
+    margin-top: 150px;
+    margin-left: 50px;
 }
 
 .hero-text h1{
     font-style: Roboto;
-    font-size: 2.5rem;
+    font-size: 50px;
     margin: 0px;
+    padding-right: 20px;
 }
+
+#homepage2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+
