--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
               </button>
               <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Destinasi Wisata</a>
+                  <a class="nav-link " href="#">Destinasi Wisata</a>
                   <a class="nav-link" href="#">Tempat Makan</a>
                   <a class="nav-link" href="#">Penginapan</a>
                 </div>
@@ -40,7 +40,7 @@
 
     <section id="homepage2">
         <h1>Keindahan kota Magetan</h1>
-          
+        
     </section>
          
 
