--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,12 @@
     <title>PEMWEB</title>
     <link rel="stylesheet" href="/style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+      .navbar-brand {
+          font-size: 2rem; /* Adjust the size as needed */
+          font-weight: bold; /* Optional: Make the text bold */
+      }
+  </style>
 </head>
 
 <body>
@@ -39,11 +45,31 @@
     </section>
 
     <section id="homepage2">
-        <h1>Keindahan kota Magetan</h1>
+      <div class="grup1">
+        <h1>Keindahan Kota Magetan</h1>
+        <p>Magetan, tempat di mana alam berbicara lewat pemandangan pegunungan yang memukau dan danau-danau yang menenangkan.</p>
+      </div>
+
+      <div class="grup2">
+    <div class="slider">
+      <div class="slide">
+        <img src="/assets/Rectangle3.png" alt="Image 1">
+      </div>
+      <div class="slide">
+        <img src="/assets/Rectangle4.png" alt="Image 2">
+      </div>
+      <div class="slide">
+        <img src="/assets/Rectangle5.png" alt="Image 3">
+      </div>
+      </div>
+    <div class="navigation">
+      <button class="prev">&lt;</button>
+      <button class="next">&gt;</button>
+    </div>
+  </div>
         
     </section>
          
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
