--- a/views/index.html
+++ b/views/index.html
@@ -6,40 +6,34 @@
     <title>PEMWEB</title>
     <link rel="stylesheet" href="/style/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-      .navbar-brand {
-          font-size: 2rem; /* Adjust the size as needed */
-          font-weight: bold; /* Optional: Make the text bold */
-      }
-  </style>
 </head>
 
 <body>
     <section id="homepage1">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Magetan</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link " href="#">Destinasi Wisata</a>
-                  <a class="nav-link" href="#">Tempat Makan</a>
-                  <a class="nav-link" href="#">Penginapan</a>
-                </div>
-              </div>
-              <!-- <div class="navbar-logo">
-                <a class="logo-home" href="#">
-                    <img src="assets/logo-home.png" alt="Home Logo" style="height: 40px;">
-                </a>
-              </div> -->
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Magetan</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link " href="#">Destinasi Wisata</a>
+              <a class="nav-link" href="#">Tempat Makan</a>
+              <a class="nav-link" href="#">Penginapan</a>
             </div>
-        </nav> 
+          </div>
+          <!-- <div class="navbar-logo">
+            <a class="logo-home" href="#">
+                <img src="assets/logo-home.png" alt="Home Logo" style="height: 40px;">
+            </a>
+          </div> -->
+        </div>
+      </nav> 
 
         <div class="hero">
             <div class="hero-text">
-                <h1>Nikmati pesona alam di Kabupaten Magetan</h1>
+                <h1>Nikmati pesona alam di<br>Kabupaten Magetan</h1>
             </div>
         </div>
     </section>
@@ -47,29 +41,31 @@
     <section id="homepage2">
       <div class="grup1">
         <h1>Keindahan Kota Magetan</h1>
-        <p>Magetan, tempat di mana alam berbicara lewat pemandangan pegunungan yang memukau dan danau-danau yang menenangkan.</p>
+        <p>Magetan, tempat di mana alam berbicara lewat pemandangan pegunungan yang memukau dan danau-danau yang menenangkan.</p>
       </div>
 
       <div class="grup2">
-    <div class="slider">
-      <div class="slide">
-        <img src="/assets/Rectangle3.png" alt="Image 1">
-      </div>
-      <div class="slide">
-        <img src="/assets/Rectangle4.png" alt="Image 2">
-      </div>
-      <div class="slide">
-        <img src="/assets/Rectangle5.png" alt="Image 3">
-      </div>
-      </div>
-    <div class="navigation">
-      <button class="prev">&lt;</button>
-      <button class="next">&gt;</button>
-    </div>
-  </div>
+        <div class="slider">
+  
+          <a href="#slide-1">1</a>
+          <a href="#slide-2">2</a>
+          <a href="#slide-3">3</a>
         
+          <div class="slides">
+            <div id="slide-1">
+              <img src="/assets/Rectangle3.png" alt="">
+            </div>
+            <div id="slide-2">
+              <img src="/assets/Rectangle4.png" alt="">
+            </div>
+            <div id="slide-3">
+              <img src="/assets/Rectangle5.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div> 
     </section>
-         
-
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="/scripts/script.js"></script>
 </html>
