--- a/views/index.html
+++ b/views/index.html
@@ -12,15 +12,15 @@
     <section id="homepage1">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Magetan</a>
+          <a class="navbar-brand fs-3"  href="#">Magetan</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link " href="#">Destinasi Wisata</a>
-              <a class="nav-link" href="#">Tempat Makan</a>
-              <a class="nav-link" href="#">Penginapan</a>
+            <div class="navbar-nav px-4 border border-white border-3 rounded-pill">
+              <a class="nav-link py-0 fw-semibold" href="#">Destinasi Wisata</a>
+              <a class="nav-link py-0 fw-semibold" href="#">Tempat Makan</a>
+              <a class="nav-link py-0 fw-semibold" href="#">Penginapan</a>
             </div>
           </div>
           <!-- <div class="navbar-logo">
