--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
 
         <div class="hero">
             <div class="hero-text">
-                <h1>Nikmati pesona alam di<br>Kabupaten Magetan</h1>
+                <h1>Nikmati pesona <br> alam di Kabupaten <br> Magetan</h1>
             </div>
         </div>
     </section>
