--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,10 +67,10 @@
 }
 
 .hero-section { 
-    background: url(/images/gambar-telaga.jpeg) no-repeat center;
+    background: url(/images/gambar-telaga-bg.jpeg) no-repeat center;
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    
 }
 
 .hero-section::before { 
@@ -81,4 +81,26 @@
     right: 0;
     bottom: 0;
     left: 0;
+}
+
+.hero-section .container {
+    height: 100vh;
+    z-index: 1;
+    
+    position: relative;
+}
+
+
+
+
+
+.card {
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
+    
+}
+
+
+.card-body {
+
 }
