--- a/view/tempat-wisata.html
+++ b/view/tempat-wisata.html
@@ -33,13 +33,40 @@
             
           </div>
           <a href="#" class="login-button">Login</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            <button class="navbar-toggler pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
         </div>
     </nav>
+
+    
+    
     <!-- gambar telaga -->
-    <section class="hero-section"></section>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <section class="hero-section">
+      <!-- list destinasi wisata -->
+      <div class="container py-5">   
+        <div class="row row-cols-1 row-cols-md-3 g-4 py-5">
+            <div class="col">
+              <div class="card mt-5" style="width: 18rem;">
+                <img src="/images/telaga-sarangan.jpeg" class="card-img-top p-3 rounded-5" alt="">
+                <div class="card-body">
+                  <h5 class="card-title text-center">Telaga Sarangan</h5>
+                  <div class="d-flex justify-content-around">
+                      <!-- <button class="btn btn-primary">
+                          menuju
+                      </button> -->
+                  </div>
+                  
+                </div>
+              </div>
+            </div>
+        </div>  
+      </div>
+    </section>
+
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!-- "container d-flex align-items-center justify-content-center fs-1 text-white flex-colum"> -->
