--- a/views/index.html
+++ b/views/index.html
@@ -22,25 +22,25 @@
       </div>
   </nav>
 
-  <div class="hero">
-      <div class="hero-text">
-          <h1>Nikmati pesona <br> alam di Kabupaten <br> Magetan</h1>
-      </div>
-  </div>
+  <section id="homepage1">
+    <div class="hero">
+        <div class="hero-text">
+            <h1>Nikmati pesona <br> alam di Kabupaten <br> Magetan</h1>
+        </div>
+    </div>
+  </section>
 
   <section id="homepage2">
   <div class="grup1">
-      <h1>Keindahan Kota Magetan</h1>
-      <p>Magetan, tempat di mana alam berbicara lewat pemandangan pegunungan yang memukau dan danau-danau yang menenangkan.</p>
+      <h1>KEINDAHAN <br> KOTA MAGETAN</h1>
+      <p>Magetan, tempat di mana alam <br> berbicara lewat pemandangan <br> pegunungan yang memukau dan <br> danau-danau yang menenangkan</p>
   </div>
 
   <div class="grup2">
       <div class="slider">
-
-      <a href="#slide-1">1</a>
-      <a href="#slide-2">2</a>
-      <a href="#slide-3">3</a>
-      
+        <a href="#slide-1">1</a>
+        <a href="#slide-2">2</a>
+        <a href="#slide-3">3</a>
       <div class="slides">
           <div id="slide-1">
           <img src="/assets/Rectangle3.png" alt="">
@@ -55,6 +55,17 @@
       </div>
   </div> 
   </section>
+
+  <section id="homepage3">
+    <div class="gambar">
+        <img src="/assets/Frame6.png" alt="">
+    </div>
+    <div class="tentang">
+        <h1>TENTANG<br> KOTA MAGETAN</h1>
+        <p>Magetan, tempat di mana alam <br> berbicara lewat pemandangan <br> pegunungan yang memukau dan <br> danau-danau yang menenangkan</p>
+    </div>
+  </section>
+
   </body>
   <script src="/scripts/script.js"></script>
 </html>
