--- a/style/style.css
+++ b/style/style.css
@@ -4,24 +4,24 @@
 
 
 body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    font-family: 'Roboto Serif', serif;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'Roboto Serif', serif;
 }
 
 .navbar {
-    width: 100%;
-    display: flex;
-    position: fixed;
-    top: 0;
-    justify-content: space-between; 
-    background: rgba(255, 255, 255, 0); 
-    padding: 30px;
-    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
-    z-index: 1000;  
-    font-family: 'Roboto', sans-serif;
+  width: 100%;
+  display: flex;
+  position: fixed;
+  top: 0;
+  justify-content: space-between; 
+  background: rgba(255, 255, 255, 0); 
+  padding: 30px;
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+  z-index: 1000;  
+  font-family: 'Roboto', sans-serif;
 }
 
 .navbar.solid {
@@ -57,47 +57,47 @@ body, html {
 }
 
 .logo {
-    color: white;
-    flex: 1;
-    margin-left: 55px;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 20px 20px;
-    font-size: 25px;
+  color: white;
+  flex: 1;
+  margin-left: 55px;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 20px 20px;
+  font-size: 25px;
 }
 
 .menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 15px;
-    font-weight: 500;
-    border: 3px solid rgb(255, 255, 255); 
-    border-radius: 25px;
-    padding: 1px 10px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  font-weight: 500;
+  border: 3px solid rgb(255, 255, 255); 
+  border-radius: 25px;
+  padding: 1px 10px; 
 }
 
 .menu ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 .menu ul li {
-    margin: 0 10px; /* Menambahkan margin antara setiap item menu */
+  margin: 0 10px; /* Menambahkan margin antara setiap item menu */
 }
 
 .menu ul li a {
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 8px 16px; /*Menyesuaikan padding untuk memberikan ruang di sekitar teks */
-    border-radius: 15px; /* Mengatur sudut lengkung border */
-    border: 2px solid transparent; /* Menyembunyikan border awal dengan warna transparan */
-    transition: border-color 0.3s ease; /* Efek transisi untuk smooth hover */
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 8px 16px; /*Menyesuaikan padding untuk memberikan ruang di sekitar teks */
+  border-radius: 15px; /* Mengatur sudut lengkung border */
+  border: 2px solid transparent; /* Menyembunyikan border awal dengan warna transparan */
+  transition: border-color 0.3s ease; /* Efek transisi untuk smooth hover */
 }
 
 .menu ul li a:hover {
@@ -105,72 +105,69 @@ body, html {
 }
 
 .home {
-    color: white;
-    flex: 1;
-    text-align: right; 
-    margin-right: 50px;
-    padding: 20px 20px;
+  color: white;
+  flex: 1;
+  text-align: right; 
+  margin-right: 50px;
+  padding: 20px 20px;
 }
 
-
 .hero {
-    width: 100%;
-    height: 100vh;
-    background: url('/assets/Frame.png') no-repeat center center/cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    text-align: center;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
+  width: 100%;
+  height: 100vh;
+  background: url('/assets/Frame.png') no-repeat center center/cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
 
 .hero h1 {
-    font-size: 4em;
-    margin: 0;
+  font-size: 4em;
+  margin: 0;
 }
 
 
 .hero-text {
-    color: #fff;
-    text-align: left;  
-    margin-top: 150px;
-    margin-left: 100px;
-    padding-right: 20px;
+  color: #fff;
+  text-align: left;  
+  margin-top: 150px;
+  margin-left: 100px;
+  padding-right: 20px;
 }
 
 .hero-text h1{
   font-family: 'Roboto Serif', serif;
   font-size: 50px;
-  font-weight: 900;
   font-weight: 700;
 }
 
 #homepage2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 70px;
+  margin-bottom: 90px;
 }
 
-.grup1 {
-    padding: 20px, 100px;
-    margin-left: 20px;
-    margin-top: 20px;
+.grup1 h1 {
+  font-family: 'Roboto Serif', serif;
+  font-size: 60px;
+  font-weight: 400;
+  margin-bottom: 0px;
 }
 
-#homepage2 {
-    padding: 0px 0;
-}
-  
-#homepage2 h1 {
-  font-size: 30px;
-  margin-bottom: 20px;
+.grup1 p{
+  font-weight: 100;
+  font-size: 25px;
 }
 
 * {
@@ -178,24 +175,20 @@ body, html {
 }
 
 .slider {
-
-  width: 300px;
+  width: 400px;
   text-align: center;
   overflow: hidden;
 }
 
 .slides {
   display: flex;
-  margin-right: 40px;
+  width: 1200;
   overflow-x: auto;
   scroll-snap-type: x mandatory; 
   scroll-behavior: smooth;
   -webkit-overflow-scrolling: touch;
-  /*
-  scroll-snap-points-x: repeat(300px);
-  scroll-snap-type: mandatory;
-  */
 }
+
 .slides::-webkit-scrollbar {
   width: 10px;
   height: 10px;
@@ -213,8 +206,8 @@ body, html {
 .slides > div {
   scroll-snap-align: start;
   flex-shrink: 0;
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   margin-right: 50px;
   border-radius: 10px;
   background: #eee;
@@ -222,14 +215,13 @@ body, html {
   transform: scale(1);
   transition: transform 0.5s;
   position: relative;
-  
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 100px;
 }
 
-img {
+.slides img {
   object-fit: cover;
   position: absolute;
   top: 0;
@@ -250,10 +242,33 @@ img {
   margin: 0 0 0.5rem 0;
   position: relative;
 }
+
 .slider > a:active {
   top: 1px;
 }
+
 .slider > a:focus {
   background: #000;
 }
   
+#homepage3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
+
+.gambar img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+.tentang h1{
+  font-family: 'Roboto Serif', serif;
+  font-size: 65px;
+  font-weight: 400;
+  margin-bottom: 0px;
+}
+
