--- a/style/style.css
+++ b/style/style.css
@@ -261,14 +261,95 @@ body, html {
 
 .gambar img {
   max-width: 100%;
-  height: auto;
+  height: 550px;
   display: block;
 }
 
 .tentang h1{
   font-family: 'Roboto Serif', serif;
-  font-size: 65px;
+  font-size: 60px;
   font-weight: 400;
   margin-bottom: 0px;
 }
 
+.tentang p{
+  font-weight: 100;
+  font-size: 25px;
+}
+
+#homepage4 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 0px;
+  margin-bottom: 70px;
+}
+
+.jelajahi h1{
+  font-family: 'Roboto Serif', serif;
+  font-size: 60px;
+  font-weight: 400;
+  margin-bottom: 0px;
+  margin-right: 200px;
+  margin-top: 20px;
+  margin-left: 40px;
+}
+
+.kuliner h1{
+  font-family: 'Roboto Serif', serif;
+  font-size: 60px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+}
+
+.wisatapreview{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-left: 40px;
+}
+
+.wisatapreview h2{
+  margin-right: 30px;
+  margin-bottom: 0;
+  font-size: 35px;
+  font-weight: 300;
+}
+
+.wisatapreview p{
+  margin-right: 20px;
+  margin-top: 10px;
+  font-size: 20px;
+  font-weight: 300;
+}
+
+.wisatapreview img{ 
+  margin-right: 50px;
+  margin-top: 35px;
+}
+
+.kuliner{
+  width: 100;
+  height: 100;
+  background-color:#3D3B3B;
+  border-radius: 1.5em;
+}
+
+.kuliner h1{
+  color: #ffffff;
+  margin-right: 200px;
+  margin-left: 70px;
+  margin-top: 20px;
+}
+
+.kulinerpreview{
+  display: flex;
+  justify-content: center;
+  margin-left: 40px;
+}
+
+.kulinerpreview tex1{
+  display: flex;
+  justify-content: center;
+}
