--- a/views/index.html
+++ b/views/index.html
@@ -66,6 +66,49 @@
     </div>
   </section>
 
+  <section id="homepage4">
+    <div class="jelajahi">
+        <h1>JELAJAHI</h1>
+        <div class="wisatapreview">
+            <div class="text1">
+                <h2>JUDUL REVIEW</h2>
+                <p>Pemandangan yang menyejukkan hati,<br> dimana kita dapat melihat bunga-bunga <br>yang indah.</p>
+            </div>
+            <img src="/assets/gambar1.png" alt="">
+        </div>
+        <div class="wisatapreview">
+            <div class="text2">
+                <h2>JUDUL REVIEW</h2>
+                <p>Pemandangan yang menyejukkan hati,<br> dimana kita dapat melihat bunga-bunga <br>yang indah.</p>
+            </div>
+            <img src="/assets/gambar2.png" alt="">
+        </div>
+        <div class="wisatapreview">
+            <div class="text3">
+                <h2>JUDUL REVIEW</h2>
+                <p>Pemandangan yang menyejukkan hati,<br> dimana kita dapat melihat bunga-bunga <br>yang indah.</p>
+            </div>
+            <img src="/assets/gambar3.png" alt="">
+        </div>
+        <div class="wisatapreview">
+            <div class="text4">
+                <h2>JUDUL REVIEW</h2>
+                <p>Pemandangan yang menyejukkan hati,<br> dimana kita dapat melihat bunga-bunga <br>yang indah.</p>
+            </div>
+            <img src="/assets/gambar4.png" alt="">
+        </div>
+    </div>
+
+    <div class="kuliner">
+        <h1>KULINER</h1>
+        <div class="kulinerpreview">
+            <div class="text1">
+                <img src="/assets/Ellipse1.png" alt="">
+                <p>dfha</p>
+            </div>
+        </div>
+    </div>
+  </section>
   </body>
   <script src="/scripts/script.js"></script>
 </html>
