--- a/views/index.html
+++ b/views/index.html
@@ -71,28 +71,28 @@
         <h1>JELAJAHI</h1>
         <div class="wisatapreview">
             <div class="text1">
-                <h2>JUDUL REVIEW</h2>
+                <h2> <a href="#judul1">JUDUL REVIEW</a></h2>
                 <p>Pemandangan yang menyejukkan hati,<br> dimana kita dapat melihat bunga-bunga <br>yang indah.</p>
             </div>
             <img src="/assets/gambar1.png" alt="">
         </div>
         <div class="wisatapreview">
             <div class="text2">
-                <h2>JUDUL REVIEW</h2>
+                <h2> <a href="#judul2">JUDUL REVIEW</a></h2>
                 <p>Pemandangan yang menyejukkan hati,<br> dimana kita dapat melihat bunga-bunga <br>yang indah.</p>
             </div>
             <img src="/assets/gambar2.png" alt="">
         </div>
         <div class="wisatapreview">
             <div class="text3">
-                <h2>JUDUL REVIEW</h2>
+                <h2> <a href="#judul3">JUDUL REVIEW</a></h2>
                 <p>Pemandangan yang menyejukkan hati,<br> dimana kita dapat melihat bunga-bunga <br>yang indah.</p>
             </div>
             <img src="/assets/gambar3.png" alt="">
         </div>
         <div class="wisatapreview">
             <div class="text4">
-                <h2>JUDUL REVIEW</h2>
+                <h2> <a href="#judul4">JUDUL REVIEW</a></h2>
                 <p>Pemandangan yang menyejukkan hati,<br> dimana kita dapat melihat bunga-bunga <br>yang indah.</p>
             </div>
             <img src="/assets/gambar4.png" alt="">
@@ -102,9 +102,27 @@
     <div class="kuliner">
         <h1>KULINER</h1>
         <div class="kulinerpreview">
-            <div class="text1">
+            <div class="satu">
                 <img src="/assets/Ellipse1.png" alt="">
-                <p>dfha</p>
+                <p><a href="#kuliner1">Sate Kelinci</a></p>
+            </div>
+        </div>
+        <div class="kulinerpreview">
+            <div class="satu">
+                <img src="/assets/Ellipse2.png" alt="">
+                <p><a href="#kuliner1">Sate Kelinci</a></p>
+            </div>
+        </div>
+        <div class="kulinerpreview">
+            <div class="satu">
+                <img src="/assets/Ellipse3.png" alt="">
+                <p><a href="#kuliner1">Sate Kelinci</a></p>
+            </div>
+        </div>
+        <div class="kulinerpreview">
+            <div class="satu">
+                <img src="/assets/Ellipse4.png" alt="">
+                <p><a href="#kuliner1">Sate Kelinci</a></p>
             </div>
         </div>
     </div>
