--- a/views/index.html
+++ b/views/index.html
@@ -127,6 +127,15 @@
         </div>
     </div>
   </section>
+
+  <footer>
+    <p>&copy; copyright 2024 Kelompok 6 Pemrograman Web A-081</p>
+    <p>
+        <a href="#home">Home</a> |
+        <a href="#about">About Us</a> |
+        <a href="#contact">Contact</a>
+    </p>
+</footer>
   </body>
   <script src="/scripts/script.js"></script>
 </html>
