--- a/views/index.html
+++ b/views/index.html
@@ -12,9 +12,9 @@
       <div class="logo">Magetan</div>
       <div class="menu">
           <ul>
-              <li> <a href="#home">Destinasi Wisata</a></li>
-              <li> <a href="#about">Tempat Makan</a></li>
-              <li> <a href="#services">Penginapan</a></li>
+              <li> <a href="#destinasi">Destinasi Wisata</a></li>
+              <li> <a href="/views/tempatmakan.html">Tempat Makan</a></li>
+              <li> <a href="#penginapan">Penginapan</a></li>
           </ul>    
       </div>
       <div class="home">
