--- a/views/index.html
+++ b/views/index.html
@@ -110,19 +110,19 @@
         <div class="kulinerpreview">
             <div class="satu">
                 <img src="/assets/Ellipse2.png" alt="">
-                <p><a href="#kuliner1">Sate Kelinci</a></p>
+                <p><a href="#kuliner1">Nasi Pecel</a></p>
             </div>
         </div>
         <div class="kulinerpreview">
             <div class="satu">
                 <img src="/assets/Ellipse3.png" alt="">
-                <p><a href="#kuliner1">Sate Kelinci</a></p>
+                <p><a href="#kuliner1">Sop Buntut</a></p>
             </div>
         </div>
         <div class="kulinerpreview">
             <div class="satu">
                 <img src="/assets/Ellipse4.png" alt="">
-                <p><a href="#kuliner1">Sate Kelinci</a></p>
+                <p><a href="#kuliner1">Bakso Magetan</a></p>
             </div>
         </div>
     </div>
