--- a/views/tempatmakan.html
+++ b/views/tempatmakan.html
@@ -27,10 +27,11 @@
         <div class="background2">
             <img src="/assets/rm-pawon-sewu.jpeg" alt="">
         </div>
+        <div>
+            dafhsfh
+        </div>
     </div>
   </section>
-
-
 
   <footer>
     <p>&copy; copyright 2024 Kelompok 6 Pemrograman Web A-081</p>
