--- a/views/tempatmakan.html
+++ b/views/tempatmakan.html
@@ -21,18 +21,28 @@
           <a href="#home">Home</a>
       </div>
   </nav>
-
+  
   <section id="homepage1">
     <div class="hero">
-        <div class="background2">
-            <img src="/assets/rm-pawon-sewu.jpeg" alt="">
-        </div>
-        <div>
-            dafhsfh
+        <div class="contoh">
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
         </div>
     </div>
   </section>
-
+  <section id="homepage2">
+    <div class="backgorund2"></div>
+  </section>
   <footer>
     <p>&copy; copyright 2024 Kelompok 6 Pemrograman Web A-081</p>
     <p>
