--- a/style/tempatmakan.css
+++ b/style/tempatmakan.css
@@ -120,30 +120,51 @@ body, html {
     width: 100%;
     height: 100vh;
     background: url('/assets/Frame2.png') no-repeat center center/cover;
-    display: flex;
     align-items: center;
     justify-content: center;
     color: white;
-    text-align: center;
     background-size: cover;
     background-position: center;
     position: relative;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    position: relative;
 }
 
 #homepage1{
     background-color: #886868;
     height: max-content;
+    justify-content: center;
 }
 
-.background2 img{
-    height: 50px;
-    width: 50px;
+#homepage2{
+  background-color: #886868;
+  height: 80vh;
 }
 
+.contoh {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  max-width: 900px;
+  padding: 10px;
+  box-sizing: border-box;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  margin-top: 90vh;
+}
+
+.contoh img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+.contoh a :hover {
+  height: 50%;
+  object-fit: cover;
+  object-position: 25% 25%; 
+
+}
 footer {
     background-color: #333;
     color: #fff;
