--- a/view/tempat-wisata copy.html
+++ b/view/tempat-wisata copy.html
@@ -17,7 +17,7 @@
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Magetan Travel Guide</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body">
+            <div class="offcanvas-body mx-auto">
               <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                 <li class="nav-item">
                   <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Destinasi Wisata</a>
@@ -27,6 +27,9 @@
                 </li>
                 <li class="nav-item">
                   <a class="nav-link mx-lg-2" href="#">Penginapan</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link mx-lg-2 " href="#">Beranda</a>
                 </li>
               </ul>
             </div>
@@ -41,17 +44,18 @@
 
     
     
-    <!-- gambar telaga -->
+    
     <section class="hero-section">
-      <!-- list destinasi wisata -->
-      <div class="container">   
-        <div class="card__container">
+       <!-- list destinasi wisata  -->
+      <!-- gambar telaga -->
+      <div class="container mx-auto">   
+        <div class="card__container mx-auto mt-5">
           <article class="card__article">
             <img src="/images/telaga-sarangan-.jpg" alt="" class="card__img">
             <div class="card__data">
               <span class="card__description"></span>
               <h2 class="card__title">Telaga Sarangan</h2>
-              <a href="" class="card__button">Baca Selengkapnya</a>
+              <a href="/view/telaga-sarangan.html" class="card__button">Baca Selengkapnya</a>
             </div>
           </article>
 
@@ -65,15 +69,17 @@
           </article>
 
           <article class="card__article">
-            <img src="/images/bukit-mongkrang.jpg" alt="" class="card__img">
+            <img src="/images/bukit-mongkrang.jpeg" alt="" class="card__img">
             <div class="card__data">
               <span class="card__description"></span>
               <h2 class="card__title">Bukit Mongkrang</h2>
               <a href="" class="card__button">Baca Selengkapnya</a>
             </div>
           </article>
-        </div>  
-      </div>
+
+          
+      </div>  
+    </div>
     </section>
 
     
