--- a/views/tempatmakan.html
+++ b/views/tempatmakan.html
@@ -25,21 +25,58 @@
   <section id="homepage1">
     <div class="hero">
         <div class="contoh">
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-            <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+            <div class="kelas">
+                <img src="/assets/wisata-kuliner-magetan.jpeg" alt="">
+                <div class="overlay">Wisata Kuliner Magetan</div>
+            </div>
+            <div class="kelas">
+                <img src="/assets/bekicot-magetan.jpeg" alt="">
+                <div class="overlay">Bekicot Magetan</div>
+            </div>
+            <div class="kelas">
+                <img src="/assets/sop-buntut-dan-est-teler-jeng-sri.jpeg" alt="">
+                <div class="overlay">Sop Buntut dan <br> Es Teler Jeng Sri</div>
+            </div>
+            <div class="kelas">
+                <a href=""><img src="/assets/warung-nasi-pecel-bu-parti.jpeg" alt=""></a>
+                <div class="overlay">Warung Nasi Pecel <br> Bu Parti</div>
+            </div>
+            <div class="kelas">
+                <a href=""><img src="/assets/korean-grill.png" alt=""></a>
+                <div class="overlay">kedai RESEP KUNO <br>(korean and javanesse grill)
+                </div>
+            </div>
+            <div class="kelas">
+                <a href=""><img src="/assets/rumah-kuliner-kang-ethes.jpeg" alt=""></a>
+                <div class="overlay"></div>
+            </div>
+            <div class="kelas">
+                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+                <div class="overlay">Keterangan 1</div>
+            </div>
+            <div class="kelas">
+                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+                <div class="overlay">Keterangan 1</div>
+            </div>
+            <div class="kelas">
+                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+                <div class="overlay">Keterangan 1</div>
+            </div>
+            <div class="kelas">
+                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+                <div class="overlay">Keterangan 1</div>
+            </div><div class="kelas">
+                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+                <div class="overlay">Keterangan 1</div>
+            </div>
+            <div class="kelas">
+                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
+                <div class="overlay">Keterangan 1</div>
+            </div> 
         </div>
     </div>
   </section>
+
   <section id="homepage2">
     <div class="backgorund2"></div>
   </section>
