--- a/style/tempatmakan.css
+++ b/style/tempatmakan.css
@@ -154,17 +154,40 @@ body, html {
   margin-top: 90vh;
 }
 
+.contoh .kelas{
+  position: relative;
+}
+
 .contoh img {
-  width: 100%;
-  height: auto;
+  width: 250px;
+  height: 250px;
   border-radius: 10px;
 }
-.contoh a :hover {
-  height: 50%;
-  object-fit: cover;
-  object-position: 25% 25%; 
 
+.contoh .overlay{
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background: rgba(255, 255, 255, 255);
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  transform: translateY(100%);
+  transition: transform 0.3s;
+  transition: transform 0.3s, opacity 0.3s;
+  opacity: 0;
 }
+
+.contoh .kelas:hover .overlay{
+  transform: translateY(0);
+  opacity: 1;
+}
+
 footer {
     background-color: #333;
     color: #fff;
