--- a/views/tempatmakan.html
+++ b/views/tempatmakan.html
@@ -18,7 +18,7 @@
           </ul>    
       </div>
       <div class="home">
-          <a href="#home">Home</a>
+          <a href="/views/index.html">Home</a>
       </div>
   </nav>
   
@@ -27,51 +27,50 @@
         <div class="contoh">
             <div class="kelas">
                 <img src="/assets/wisata-kuliner-magetan.jpeg" alt="">
-                <div class="overlay">Wisata Kuliner Magetan</div>
+                <a href="#"><div class="overlay">Wisata Kuliner Magetan</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/bekicot-magetan.jpeg" alt="">
-                <div class="overlay">Bekicot Magetan</div>
+                <a href=""><div class="overlay">Bekicot Magetan</div></a>
             </div>
             <div class="kelas">
                 <img src="/assets/sop-buntut-dan-est-teler-jeng-sri.jpeg" alt="">
-                <div class="overlay">Sop Buntut dan <br> Es Teler Jeng Sri</div>
+                <a href=""><div class="overlay">Sop Buntut dan <br> Es Teler Jeng Sri</div></a>
             </div>
             <div class="kelas">
-                <a href=""><img src="/assets/warung-nasi-pecel-bu-parti.jpeg" alt=""></a>
-                <div class="overlay">Warung Nasi Pecel <br> Bu Parti</div>
+                <img src="/assets/warung-nasi-pecel-bu-parti.jpeg" alt="">
+                <a href=""><div class="overlay">Warung Nasi Pecel <br> Bu Parti</div></a>
             </div>
             <div class="kelas">
-                <a href=""><img src="/assets/korean-grill.png" alt=""></a>
-                <div class="overlay">kedai RESEP KUNO <br>(korean and javanesse grill)
-                </div>
+                <img src="/assets/korean-grill.png" alt="">
+                <a href=""><div class="overlay">kedai RESEP KUNO <br>(korean and javanesse grill)</div></a>
             </div>
             <div class="kelas">
-                <a href=""><img src="/assets/rumah-kuliner-kang-ethes.jpeg" alt=""></a>
-                <div class="overlay"></div>
+                <img src="/assets/rumah-kuliner-kang-ethes.jpeg" alt="">
+                <a href=""><div class="overlay">Rumah Kuliner Kang Ethes</div></a>
             </div>
             <div class="kelas">
-                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-                <div class="overlay">Keterangan 1</div>
+                <img src="/assets/bambu-muda.jpeg" alt="">
+                <a href=""><div class="overlay">Bambu Muda</div></a>
             </div>
             <div class="kelas">
-                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-                <div class="overlay">Keterangan 1</div>
+                <img src="/assets/rm-pawon-sewu.jpeg" alt="">
+                <a href=""><div class="overlay">Rumah Makan <br> Pawon Sewu</div></a>
             </div>
             <div class="kelas">
-                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-                <div class="overlay">Keterangan 1</div>
+                <img src="/assets/sambelan-layah.jpeg" alt="">
+                <a href=""><div class="overlay">Sambelan Layah <br> Asli Magetan</div></a>
             </div>
             <div class="kelas">
-                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-                <div class="overlay">Keterangan 1</div>
+                <img src="/assets/restoran-joglonekarto.jpeg" alt="">
+                <a href=""><div class="overlay">Restoran Joglonekarto</div></a>
             </div><div class="kelas">
-                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-                <div class="overlay">Keterangan 1</div>
+                <img src="/assets/mammie.png" alt="">
+                <a href=""><div class="overlay">Mammie Kuliner</div></a>
             </div>
             <div class="kelas">
-                <a href=""><img src="/assets/rm-pawon-sewu.jpeg" alt=""></a>
-                <div class="overlay">Keterangan 1</div>
+                <img src="/assets/getuk-pisang-diana.jpeg" alt="">
+                <a href=""><div class="overlay">Gethuk Diana</div></a>
             </div> 
         </div>
     </div>
