destinasi wisata uwes

--- a/view/tempat-wisata copy.html
+++ b/view/tempat-wisata copy.html
@@ -51,7 +51,7 @@
       <div class="container mx-auto">   
         <div class="card__container mx-auto mt-5">
           <article class="card__article">
-            <img src="/images/telaga-sarangan-.jpg" alt="" class="card__img">
+            <img src="/images/telaga-sarangan- (2).jpg" alt="" class="card__img">
             <div class="card__data">
               <span class="card__description"></span>
               <h2 class="card__title">Telaga Sarangan</h2>
@@ -64,7 +64,7 @@
             <div class="card__data">
               <span class="card__description"></span>
               <h2 class="card__title">Telaga Wahyu</h2>
-              <a href="" class="card__button">Baca Selengkapnya</a>
+              <a href="/view/telaga-wahyu.html" class="card__button">Baca Selengkapnya</a>
             </div>
           </article>
 
@@ -72,8 +72,8 @@
             <img src="/images/bukit-mongkrang.jpeg" alt="" class="card__img">
             <div class="card__data">
               <span class="card__description"></span>
-              <h2 class="card__title">Bukit Mongkrang</h2>
-              <a href="" class="card__button">Baca Selengkapnya</a>
+              <h2 class="card__title">Gunung Mongkrang</h2>
+              <a href="/view/gunung-mongkrang.html" class="card__button">Baca Selengkapnya</a>
             </div>
           </article>
 
@@ -84,6 +84,7 @@
 
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/38be933f5f.js" crossorigin="anonymous"></script>
 </body>
 </html>
 
