--- a/styles/style-new-page.css
+++ b/styles/style-new-page.css
@@ -1,5 +1,58 @@
+/*=============== GOOGLE FONTS ===============*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
+/*=============== VARIABLES CSS ===============*/
+:root {
+  /*========== Colors ==========*/
+  /*Color mode HSL(hue, saturation, lightness)*/
+  --first-color: hsl(82, 60%, 28%);
+  --second-color: hsl(82, 60%, 18%);
+  --title-color: hsl(0, 0%, 15%);
+  --text-color: hsl(0, 0%, 35%);
+  --body-color: hsl(0, 0%, 95%);
+  --container-color: hsl(0, 0%, 100%);
+
+  /*========== Font and typography ==========*/
+  /*.5rem = 8px | 1rem = 16px ...*/
+  --body-font: "Poppins", sans-serif;
+  --h2-font-size: 1.25rem;
+  --small-font-size: .813rem;
+}
+
+/*========== Responsive typography ==========*/
+@media screen and (min-width: 1120px) {
+  :root {
+    --h2-font-size: 1.5rem;
+    --small-font-size: .875rem;
+  }
+}
+
+/*=============== BASE ===============*/
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: var(--body-font);
+  background-color: var(--body-color);
+  color: var(--text-color);
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+body::-webkit-scrollbar{
+    display: none;
+}
+
 .navbar {
     background-color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     height: 80p;
     margin: 20px;
     border-radius: 16px;
@@ -7,13 +60,13 @@
 }
 .navbar-brand {
     font-weight: 500;
-    color: rgb(204, 16, 16);
+    color: var(--first-color);
     font-size: 24px;
     transition: 0.3s color;
 }
 
 .login-button { 
-    background-color: rgb(59, 59, 59);
+    background-color: var(--first-color);
     color: #ffffff;
     font-size: 14px;
     padding: 8px 20px;
@@ -22,7 +75,7 @@
     transition: 0,3s background-color;
 }
 .login-button:hover { 
-    background-color: rgb(44, 44, 44);
+    background-color: var(--second-color);
 
 }
 
@@ -36,14 +89,14 @@
     outline: none;
 }
 .nav-link {
-    border: #8a0707;
+    border: var(--first-color);
     color: black;
     font-weight: 500;
     position: relative;
 }
 
 .nav-link:hover, .nav-link.active {
-    color: red;
+    color: var(--first-color);
 
 }
 @media (min-width: 991px){
@@ -66,8 +119,31 @@
     }
 }
 
-.banner {
-    background: url(/images/telaga-sarangan.png) no-repeat center center;
+.banner-sarangan {
+    background: url(/images/telaga-sarangan.jpg) no-repeat center center;
+
+    background-size: cover;
+    width: 100%;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    color: #ffffff;
+
+
+}
+
+.banner-wahyu {
+    background: url(/images/telaga-wahyu-hitam.jpg) no-repeat center center;
+
+    background-size: cover;
+    width: 100%;
+    padding-top: 20%;
+    padding-bottom: 20%;
+    color: #ffffff;
+
+
+}
+.banner-mongkrang {
+    background: url(/images/bukit-mongkrang-hitam.jpg) no-repeat center center;
 
     background-size: cover;
     width: 100%;
@@ -79,3 +155,25 @@
 }
 
 
+.content {
+    position: relative;
+    z-index: 1; 
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+
+.circle {
+    display: inline-block;
+    border-radius: 50%;
+    width: 150px;
+    margin: auto;
+    height: 150px;
+    color: white;
+    background-color: var(--first-color);
+}
+
+.circle i {
+    position: relative;
+    top: 30px;
+}
