--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,7 @@
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
   --first-color: hsl(82, 60%, 28%);
+  --second-color: hsl(82, 60%, 18%);
   --title-color: hsl(0, 0%, 15%);
   --text-color: hsl(0, 0%, 35%);
   --body-color: hsl(0, 0%, 95%);
@@ -48,6 +49,7 @@ img {
 
 .navbar {
     background-color: #ffffff;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     height: 80p;
     margin: 20px;
     border-radius: 16px;
@@ -55,13 +57,13 @@ img {
 }
 .navbar-brand {
     font-weight: 500;
-    color: rgb(204, 16, 16);
+    color: var(--first-color);
     font-size: 24px;
     transition: 0.3s color;
 }
 
 .login-button { 
-    background-color: rgb(59, 59, 59);
+    background-color: var(--first-color);
     color: #ffffff;
     font-size: 14px;
     padding: 8px 20px;
@@ -70,7 +72,7 @@ img {
     transition: 0,3s background-color;
 }
 .login-button:hover { 
-    background-color: rgb(44, 44, 44);
+    background-color: var(--second-color);
 
 }
 
@@ -84,14 +86,14 @@ img {
     outline: none;
 }
 .nav-link {
-    border: #8a0707;
+    border: var(--first-color);
     color: black;
     font-weight: 500;
     position: relative;
 }
 
 .nav-link:hover, .nav-link.active {
-    color: red;
+    color: var(--first-color);
 
 }
 @media (min-width: 991px){
